--- a/index.html
+++ b/index.html
@@ -91,6 +91,22 @@
 
 </table>
 
+<hr>
+
+<h2>My Expertise</h2>
+
+<div id="kiri">
+<h3>UX Design</h3>
+<p>A UX Designer is a professional responsible for turning applications into something that people enjoy using. They do this by studying the user experience and measuring how easy it is to complete tasks in an efficient manner while improving ease-of-use capabilities through many different approaches.</p>
+</div>
+
+<div id="kanan">
+<h3>Backend Developer</h3>
+<p>Backend developer responsibilities include creating, maintaining, testing, and debugging the entire back end of an application or system. This includes the core application logic, databases, data and application integration, API, and other processes taking place behind the scenes.</p>
+</div>
+
+<div class="clear"></div>
+
 </main>
 
 <footer>
